--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>HAPPY NEW YEAR!</title>
+  <title>Feliz Ano nuevo 2025</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -21,67 +21,92 @@
 <body>
   <h2 style="
   position: absolute;
-  top: 8pc;
-  left: 4pc;
-  font-size: 9pc;
+  top: 2pc;
+  left: -2pc;
+  font-size: 7pc;
   text-align: center;
   color: gold;
-  width: 55pc;
+  width: 69pc;
   font-family: sans-serif;
+  z-index: 100;
+  font-family: 'MyWebFont';
   ">Feliz Ano Nuevo!!!</h2>
-	<img style="
-    opacity: 0.8;
-    position: absolute;
-    top: 38pc;
-    width: 61pc;" src="anno.png" alt="">
-<button id="myBtn" style="
+<img style="
+opacity: 0.8;
 position: absolute;
-font-size: 7pc;
-width: 44pc;
-top: 105pc;
-left: 10pc;
-border-radius: 3pc;
-background-color: transparent;
-color: gold;
-z-index: 99;
-border-color: transparent;
-">CLICK ME!!</button>
-    <img src="amore102.gif" alt="" style="
+top: 18pc;
+width: 65pc;
+z-index: 100;
+" src="anno.png" alt="">
+<button id="myBtn" style=" position: absolute;font-size: 27pc;width: 45pc;top: 78pc;left: 8pc;border-radius: 3pc;background-color: transparent;color: gold;z-index: 100;border-color: transparent;">A+G </button>
+<h1 style="
+    position: absolute;
+    background: transparent;
+    font-size: 25pc;
+    color: gold;
+    top: 90pc;
+    z-index: 10;
+    font-family: 'MyWebFont';
+    left: 33pc;
+    z-index: 100;
+">∞</h1>
+
+<img src="amore102.gif" alt="" style="
     position: relative;
-    top: 87pc;
-    left: 9pc;
-    width: 42pc;
+    top: 64pc;
+    left: -2pc;
+    width: 67pc;
+    opacity: 0.8;
+    z-index: 99;
 ">
 <h2 style="
 position: absolute;
-top: 65pc;
+top: 47pc;
 left: 3pc;
 font-size: 5pc;
 text-align: center;
 color: gold;
 width: 56pc;
-font-family: sans-serif;
+z-index: 100;
+font-family: 'MyWebFont';
 ">Ti amo immensamente mi compagnera di vita!!!</h2>
 	<center>
 
-		<canvas id="birthday"></canvas>
+		<canvas id="birthday" width="1032" height="2206" style="
+    height: 132pc;
+    width: 67pc;
+    position: relative;
+    top: -61pc;
+    left: -1pc;
+"></canvas>
 		
 	</center>
   <!-- Modal content -->
 <div id="myModal" class="modal-content">
   <div class="modal-header">
     <span class="close">&times;</span>
-    <img src="auguri-romantici.png" style="width: 57pc;" alt="">
+    <p style="
+     position: absolute;
+     color: gold;
+     text-align: center;
+     font-size: 2.5pc;
+     top: 0pc;
+     margin-left: 1pc;
+     margin-right: 9pc;
+     left: 8pc;
+">Cada ano que pasa el nuestro amor se fortalece cada dia, haciendo que nuestro corazones latan mas rapido y mas fuerte, abriendo el camino hacia nuevas aventuras que enfrentamos juntos, uniendo nuestras almas para saborear cada momento extraordinario que encontramos en el viaje de nuestra vida juntos!!      </p>
+    <img src="Buon-Anno-romantico-con-Topolino-e-Minnie.png" style="width: 64pc;" alt="">
   </div>
   <div class="modal-body">
     
-    <p style="font-size: 4pc;">
+    <p style="font-size: 3pc;text-align: center;color: gold;">
       Querida mi compañera de vida, <br>
       Feliz año nuevo a ti que eres cada día la persona más extraordinaria y única del universo entero a quien quiero amar hoy para siempre y más allá y juntos hoy despedimos otro año increíble, el 2024 que ha pasado lleno de recuerdos extraordinarios y únicos que juntos vivimos y conservamos en la caja de nuestros recuerdos que nos acompañaron aquí juntos el último día del año para celebrar juntos el nuevo año de hoy, 2025, que estoy seguro nos traerá nuevas sorpresas y nuevos momentos para vivir y pasar juntos. con todo nuestro amor que cada momento crece y se fortalece, haciéndonos más unidos que nunca. Quiero decirte gracias por existir aquí en mi vida y por hacer que cada momento sea único con cada gesto especial tuyo. Gracias por estar aquí y darme tus increíbles abrazos donde quiero quedarme para siempre y más allá y donde me siento seguro como un niño y me encanta cerrar mis ojos en tu pecho mientras me das oxígeno con tus besos y me encanta estar aquí cada momento junto con mi pequeño y precioso dinero en efectivo. Quiero abrazarte fuerte contra mí para protegerte lejos de todo daño y quiero estar aquí en cada momento de mi vida para siempre y más allá y quiero ser el lugar donde siempre estarás a salvo, mientras nuestras almas se unen cada día en una sola persona y juntos somos capaces de afrontar y ganar cada reto. Todos los días quiero verte sentir bien y admirar tu dulce sonrisa que, como el sol, ilumina mis días y me hace sentir bien, dándome felicidad y una fuerza infinita en mi corazón capaz de hacerme tocar el cielo. Que este próximo año sea un año lleno de paz y tranquilidad y que Dios lo bendiga para nosotros y nuestra preciosa familia junto con nuestra preciosa relación y que nos acompañe al inicio de este nuevo año de infinito amor generado por nuestros corazones que juntos formar un solo corazón. Vamos a despedirnos juntos de este 2024 que nos ha traído momentos hermosos e inolvidables y que guardaremos juntos en el fondo de nuestro corazón amor de mi vida y estoy orgulloso de ti y de cómo con tu fuerza que admiro cada día que tienes. No he podido parar nunca y cada desafío que has tenido es capaz de llevarlo a su fin sin detenerte nunca y recuerda que en cada momento, incluso de dificultad que parece imposible de afrontar, estaré aquí a tu lado apoyándote y animándote porque cada momento eres el numero uno en todo el universo y tomo ejemplo de ti cada día amor de mi vida y en mi pequeño camino trato de dar lo mejor de mí y juntos seamos capaces de afrontar y ganar todo. Te deseo amor de mi vida un 2025 increíble y que este nos junte cosas inolvidables e increíbles y siento que al igual que el 2024 será un año extraordinario que nos regalará emociones inolvidables y nos traerá nuevas aventuras que de la mano mano nos abriremos como regalos que la vida nos da a cada momento y lo que será más especial es que enfrentaremos cada cosa juntos con la plenitud de nuestro amor con nuestros corazones latiendo sincronizados como una melodía que quiero tocar juntos para siempre y alguna vez. ¡más allá de! Te amo inmensamente desde el fondo de mi corazón que late sólo y sólo por ti y que acoge tu preciosa alma en la infinidad de nuestros abrazos y que existe para protegerla de todo mal porque cada día mereces sólo y sólo lo bello y Cosas extraordinarias que nos ofrece la vida para la persona especial que eres cada día! Te amo infinitamente desde lo más profundo de mi mente donde eres en cada momento el sueño más hermoso, único y extraordinario que quiero tener para toda mi vida y más allá y vivirlo intensamente cada momento de mi vida! Te amo ilimitadamente desde el fondo de mi alma, tú que eres el motor que alimenta mi corazón y me mantiene vivo, tú que eres el oxígeno que me mantiene vivo y que me levanta cada día de la cama y me da fuerzas infinitas para afrontar. vivir juntos como una sola persona y lograr juntos superar cada desafío que la vida nos pone por delante, tú que eres cada parte que compone mi cuerpo y mi alma, tú que eres la estrella que guía mi camino y me lleva. en el fondo de tu corazón donde cada día me siento a salvo lejos de todo mal, tú que eres mi compañera de vida que me acompaña cada día en cada aventura, tú que eres mi dulce y única mogliettina número uno en todo el universo, tú que eres y por siempre será mi dulce pingüino que amo y quiero amar por toda mi vida y más allá, ¡tú que eres mi todo! ¡Feliz año nuevo y un abrazo intenso y besos interminables de tu topolino viziato! A+G+GIOAN = ¡hoy, por siempre y más allá!
       </p>
   </div>
   <div class="modal-footer">
-    <iframe width="900" height="400" src="https://www.youtube.com/embed/jXkKr87YfL4?si=gvnllFFwAWZQeaRd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe style="width: 62pc;
+    height: 47pc;" src="https://www.youtube.com/embed/6wNeHSqpC7c?si=J8h2Qxlh4ymJ5R7G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </div>
 	<script src="script.js"></script>
